--- a/SOWIFTP.Web/Views/Home/Index.cshtml
+++ b/SOWIFTP.Web/Views/Home/Index.cshtml
@@ -167,6 +167,24 @@
             </div>
         }
 
+        <!-- Links Accordion Item -->
+        <div class="accordion-item">
+            <h2 class="accordion-header" id="headingLinks">
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseLinks" aria-expanded="false" aria-controls="collapseLinks">
+                    Links
+                </button>
+            </h2>
+            <div id="collapseLinks" class="accordion-collapse collapse" aria-labelledby="headingLinks" data-bs-parent="#accordionFTPtool">
+                <div class="accordion-body">
+                    <ul>
+                        <li><a href="https://github.com/SOWIinformatic/SOWIFTP" target="_blank">SOWIFTP GitHub Repository</a></li>
+                        <li><a href="https://github.com/SOWIinformatic" target="_blank">SOWIinformatic GitHub Organization</a></li>
+                        <li><a href="https://sowi.ch" target="_blank">SOWI Informatik</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
 
