--- a/SOWIFTP.Web/Views/Shared/_Layout.cshtml
+++ b/SOWIFTP.Web/Views/Shared/_Layout.cshtml
@@ -1,9 +1,29 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="de">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SOWI FTP Web Tool</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="Entdecken Sie das Quellcode-Repository für ein innovatives, webbasiertes FTP-Tool, das durch den Einsatz von Künstlicher Intelligenz entwickelt wurde. Erfahren Sie, wie dieses Projekt die Programmiergeschwindigkeit und die Programmiergenauigkeit verbessert und neue Massstäbe in der Softwareentwicklung setzt.">
+    <meta name="keywords" content="FTP-Tool, Künstliche Intelligenz, Programmiergeschwindigkeit, Programmiergenauigkeit, Softwareentwicklung">
+    <meta name="robots" content="index, follow">
+    <title>Experimentelles Webbasiertes Software mit Künstlicher Intelligenz</title>
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Experimentelles Webbasiertes Software mit Künstlicher Intelligenz">
+    <meta property="og:description" content="Erfahren Sie, wie dieses innovative Projekt die Programmiergeschwindigkeit und die Programmiergenauigkeit durch den Einsatz von Künstlicher Intelligenz verbessert.">
+    <meta property="og:image" content="https://www.sowi.ch/assets/img/sowi/Software.png">
+    <meta property="og:url" content="https://sowi.ch/FTPtool">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Experimentelles Webbasiertes Software mit Künstlicher Intelligenz">
+    <meta name="twitter:description" content="Erfahren Sie, wie dieses innovative Projekt die Programmiergeschwindigkeit und die Programmiergenauigkeit durch den Einsatz von Künstlicher Intelligenz verbessert.">
+    <meta name="twitter:image" content="https://www.sowi.ch/assets/img/sowi/LogoSOWI.png">
+
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/SOWIFTP.Web.styles.css" asp-append-version="true" />
